--- a/assets/css2/pages/index2.css
+++ b/assets/css2/pages/index2.css
@@ -310,3 +310,16 @@ main.wrap{
   line-height: 1.2;
   position: static;
 }
+
+/* Safe padding for content sections */
+.wrap{
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+@media (max-width: 420px){ /* iPhone SE */
+  .wrap{
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
