--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -12,6 +12,7 @@
 @import url("./components/buttons.css");
 @import url("./components/cards.css");
 @import url("./components/social.css");
+@import url("./components/footer.css");
 
 /* pages */
 @import url("./pages/index2.css");
