--- a/assets/css2/pages/index2.css
+++ b/assets/css2/pages/index2.css
@@ -323,3 +323,13 @@ main.wrap{
     padding-right: 16px;
   }
 }
+
+/* Fix kicker overlap */
+#services .kicker{
+  display:block;
+  margin: 0 0 10px 0;
+  line-height: 1.2;
+}
+#services h3{
+  margin-top: 6px;
+}
