--- a/assets/css2/app.css
+++ b/assets/css2/app.css
@@ -15,7 +15,7 @@
 @import url("./components/footer.css");
 
 /* pages */
-@import url("./pages/index2.css");
+@import url("./pages/index.css");
 
 /* fixes (LAST) */
 @import url("./fixes/99_hotfix.css");
